--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,11 @@
       <div class="header__container">
         <div class="top-bar">
           <div class="grid">
-            <span class="top-bar__logo icon__company">
+            <a href="#" class="top-bar__logo icon__company">
               NA
               <br>
               MU
-            </span>
+            </a>
           </div>
           <div class="top-bar__icon">
             <a href="#menu" class="icon icon--menu"></a>
@@ -29,17 +29,15 @@
         </div>
         <div class="header__wrapper grid">
           <div class="header__bg"></div>
-          <div class="header__info">
-            <div class="container-left">
-              <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-              <div class="header__button">
-                <a href="#events" class="button-link">
-                  <p class="button-link__title">Квитки</p>
-                  <span class="button-link__arrow">
-                    <img src="./images/icons/arrow_right-icon.svg" alt="arrow right">
-                  </span>
-                </a>
-              </div>
+          <div class="container-left header__info">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <div class="header__button">
+              <a href="#events" class="button-link">
+                <p class="button-link__title">Квитки</p>
+                <span class="button-link__arrow">
+                  <img src="./images/icons/arrow_right-icon.svg" alt="arrow right">
+                </span>
+              </a>
             </div>
           </div>
         </div>
@@ -270,11 +268,11 @@
       <div class="container">
         <div class="footer__wrapper">
           <div class="footer__top">
-            <span class="icon__company">
+            <a href="#" class="icon__company">
               NA
               <br>
               MU
-            </span>
+            </a>
             <div class="footer__socials">
               <a
                 href="https://www.facebook.com/namu.museum/"
@@ -325,15 +323,10 @@
                 </li>
               </ul>
               <div class="schedule__title">
-                <p>
-                  вул. М. Грушевського, 6; Київ, 01001
-                  <br>
-                  тел. +38 (044) 278-13-57
-                  <br>
-                  факс +38 (044) 278-74-54
-                  <br>
-                  e-mail: info@namu.kiev.ua
-                </p>
+                <a href="https://maps.app.goo.gl/BUTcLTpmWrNgTJecA" class="footer__link"> вул. М. Грушевського, 6; Київ, 01001</a>
+                <a href="tel:+38 (044) 278-13-57" class="footer__link"> тел. +38 (044) 278-13-57</a>
+                <a href="tel:+38 (044) 278-74-54" class="footer__link"> факс +38 (044) 278-74-54</a>
+                <a href="mailto:info@namu.kiev.ua" class="footer__link"> e-mail: info@namu.kiev.ua</a>
               </div>
               <a href="#" class="footer__button"></a>
             </div>
