--- a/src/index.html
+++ b/src/index.html
@@ -18,28 +18,73 @@
 
       <!-- banner -->
       <section class="section banner">
+        <div class="banner__cont">
+          <h1 class="h1 banner__title">Художній музей</h1>
+          <a href="index.html" class="btn banner__btn">
+            <p class="btn__text">Квитки</p>
+            <span class="btn__arrow"></span>
+          </a>
+          <a href="#events" class="banner__anchor">Події</a>
+        </div>
+
         <div class="banner__imgs">
           <picture>
             <img
               class="banner__img"
               src="img/banner.jpg"
-              loading="lazy"
               alt="banner__img"
+              loading="lazy"
             >
           </picture>
         </div>
+      </section>
 
+      <!-- events -->
+      <section class="section events">
         <div class="section__container">
-          <div class="banner__block">
-            <div class="banner__cont">
-              <h1 class="h1 banner__title">Художній музей</h1>
-              <a href="index.html" class="btn banner__btn">
-                <p class="btn__text">Квитки</p>
-                <span class="btn__arrow"></span>
-              </a>
-            </div>
+          <h2 class="h2 events__title" id="events">Актуальні події</h2>
 
-            <a href="#events" class="banner__anchor">Події</a>
+          <div class="events__items">
+            <div class="events__item">
+              <a href="index.html" class="events__imgs">
+                <picture>
+                  <img
+                    class="events__img"
+                    src="img/events_1.jpg"
+                    alt="events__img"
+                    loading="lazy"
+                  >
+                </picture>
+              </a>
+
+              <div class="events__cont">
+                <div class="text text--size-3 events__label">ВИСТАВКА <span class="events__date">26.08-29.11.2019</span></div>
+                <h3 class="h3 events__subtitle">
+                  <a href="index.html" class="events__link">Йду і повертаюсь</a>
+                </h3>
+                <div class="text text--size-2">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
+              </div>
+            </div>
+            <div class="events__item">
+              <a href="index.html" class="events__imgs">
+                <picture>
+                  <img
+                    class="events__img"
+                    src="img/events_2.jpg"
+                    alt="events__img"
+                    loading="lazy"
+                  >
+                </picture>
+              </a>
+
+              <div class="events__cont">
+                <div class="text text--size-3 events__label">ВИСТАВКА <span class="events__date">26.08-29.11.2019</span></div>
+                <h3 class="h3 events__subtitle">
+                  <a href="index.html" class="events__link">І спогади і мрії</a>
+                </h3>
+                <div class="text text--size-2">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
