--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,11 @@
             </a>
           </div>
           <div class="top-bar__icon">
-            <a href="#menu" class="icon icon--menu"></a>
+            <a href="#menu" class="icon icon__menu">
+              <span class="icon__menu-line"></span>
+              <span class="icon__menu-line"></span>
+              <span class="icon__menu-line"></span>
+            </a>
           </div>
         </div>
         <div class="header__wrapper grid">
@@ -93,6 +97,7 @@
           </div>
         </div>
       </div>
+      <div class="menu__dark"></div>
     </aside>
     <main class="page__main">
       <section class="exhibition" id="gallery">
@@ -322,25 +327,61 @@
                   годину до закриття музею
                 </li>
               </ul>
-              <div class="schedule__title">
-                <a href="https://maps.app.goo.gl/BUTcLTpmWrNgTJecA" class="footer__link"> вул. М. Грушевського, 6; Київ, 01001</a>
-                <a href="tel:+38 (044) 278-13-57" class="footer__link"> тел. +38 (044) 278-13-57</a>
-                <a href="tel:+38 (044) 278-74-54" class="footer__link"> факс +38 (044) 278-74-54</a>
-                <a href="mailto:info@namu.kiev.ua" class="footer__link"> e-mail: info@namu.kiev.ua</a>
-              </div>
+
+              <ul class="footer__links">
+                <li class="footer__list">
+                  <a
+                    href="https://maps.app.goo.gl/BUTcLTpmWrNgTJecA"
+                    class="footer__link"
+                    target="_blank"
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                </li>
+
+                <li class="footer__list">
+                  <a
+                    href="tel:+38 (044) 278-13-57"
+                    class="footer__link"
+                    target="_blank"
+                  >
+                    тел. +38 (044) 278-13-57
+                  </a>
+                </li>
+
+                <li class="footer__list">
+                  <a
+                    href="tel:+38 (044) 278-74-54"
+                    class="footer__link"
+                    target="_blank"
+                  >
+                    факс +38 (044) 278-74-54
+                  </a>
+                </li>
+
+                <li class="footer__list">
+                  <a
+                    href="mailto:info@namu.kiev.ua"
+                    class="footer__link"
+                    target="_blank"
+                  >
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </li>
+              </ul>
               <a href="#" class="footer__button"></a>
             </div>
             <ul class="footer__navigation">
-              <li>
+              <li class="footer__list">
                 <a href="#gallery" class="footer__link">Галерея</a>
               </li>
-              <li>
+              <li class="footer__list">
                 <a href="#about-us" class="footer__link">Про Нас</a>
               </li>
-              <li>
+              <li class="footer__list">
                 <a href="#events" class="footer__link">Виставки та події</a>
               </li>
-              <li>
+              <li class="footer__list">
                 <a href="#contact" class="footer__link">Контакти</a>
               </li>
             </ul>
