added a few corrections

--- a/src/index.html
+++ b/src/index.html
@@ -288,7 +288,7 @@
     </section>
 
     <section class="subscription" id="subscription">
-      <div class="container subscription__container">
+      <div class="subscription__container">
         <h2 class="title subscription__title">Підписка</h2>
 
         <p class="subscription__subtitle">
@@ -435,6 +435,7 @@
     >
       <img src="images/icons/arrow_up.png" alt="up">
     </a>
+
     <script
       defer
       src="scripts/main.js">
