--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,7 @@
     <header class="header">
       <div class="container">
         <div class="header__top">
-          <div class="header__menu">
-            <div></div>
-
-            <div></div>
-
-            <div></div>
-          </div>
+          <div class="header__menu"></div>
 
           <a href="#home" class="header__logo">NA <br> MU</a>
         </div>
