--- a/src/index.html
+++ b/src/index.html
@@ -55,9 +55,46 @@
         <section class="events" id="events">
           <h2 class="section__title">Актуальні події</h2>
           <div class="section__content">
-            <article></article>
-            <article></article>
-            <article></article>
+            <article class="event">
+              <img
+                src="./images/events/go-and-back.png"
+                alt="йду_і_повертаюсь"
+                class="event__picture"
+              >
+              <div class="event__details">
+                <div class="event__details-top">
+                  <p class="event__type">ВИСТАВКА</p>
+                  <p class="event__date">26.08-29.11.2019</p>
+                </div>
+                <h2 class="event__title">Йду і повертаюсь</h2>
+                <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+              </div>
+            </article>
+            <article class="event">
+              <img
+              src="./images/events/memories-dreams.png"
+              alt="і спогади і мрії"
+              class="event__picture"
+              >
+              <div class="event__details">
+                <div class="event__details-top">
+                  <p class="event__type">ВИСТАВКА</p>
+                  <p class="event__date">26.08-29.11.2019</p>
+                </div>
+                <h2 class="event__title">І спогади і мрії</h2>
+                <p class="event__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </article>
+            <article class="event event--lecture">
+              <div class="event__picture event__picture--lecture"></div>
+              <div class="event__details event__details--lecture">
+                <div class="event__details-top event__details-top--lecture">
+                  <p class="event__type">ЛЕКЦІЯ</p>
+                  <p class="event__date">26/08/2019 - 11:00</p>
+                </div>
+                <h2 class="event__title">Від класицизму до романтизму</h2>
+              </div>
+            </article>
           </div>
         </section>
 
