--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Museum | Home Page</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="./img/favicon.ico"
+    >
     <link rel="stylesheet" href="./styles/app.scss">
+    <title>Museum | Home Page</title>
   </head>
   <body class="home-page">
     <!-- loader -->
@@ -15,7 +20,6 @@
 
     <!-- main -->
     <main>
-
       <!-- banner -->
       <section class="section banner">
         <div class="banner__cont">
@@ -31,7 +35,7 @@
           <picture>
             <img
               class="banner__img"
-              src="img/banner.jpg"
+              src="./img/banner.jpg"
               alt="banner__img"
               loading="lazy"
             >
@@ -50,17 +54,17 @@
                 <picture>
                   <img
                     class="events__img"
-                    src="img/events_1.jpg"
+                    src="./img/events_1.jpg"
                     alt="events__img"
                     loading="lazy"
                   >
                 </picture>
               </a>
 
-              <div class="events__cont">
-                <div class="text text--size-3 events__label">ВИСТАВКА <span class="events__date">26.08-29.11.2019</span></div>
-                <h3 class="h3 events__subtitle">
-                  <a href="index.html" class="events__link">Йду і повертаюсь</a>
+              <div class="content">
+                <div class="text text--size-3 content__label">ВИСТАВКА <span class="content__date">26.08-29.11.2019</span></div>
+                <h3 class="h3 content__subtitle">
+                  <a href="index.html" class="content__link">Йду і повертаюсь</a>
                 </h3>
                 <div class="text text--size-2">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
               </div>
@@ -70,22 +74,41 @@
                 <picture>
                   <img
                     class="events__img"
-                    src="img/events_2.jpg"
+                    src="./img/events_2.jpg"
                     alt="events__img"
                     loading="lazy"
                   >
                 </picture>
               </a>
 
-              <div class="events__cont">
-                <div class="text text--size-3 events__label">ВИСТАВКА <span class="events__date">26.08-29.11.2019</span></div>
-                <h3 class="h3 events__subtitle">
-                  <a href="index.html" class="events__link">І спогади і мрії</a>
+              <div class="content">
+                <div class="text text--size-3 content__label">ВИСТАВКА <span class="content__date">26.08-29.11.2019</span></div>
+                <h3 class="h3 content__subtitle">
+                  <a href="index.html" class="content__link">І спогади і мрії</a>
                 </h3>
                 <div class="text text--size-2">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
               </div>
             </div>
           </div>
+        </div>
+      </section>
+
+      <!-- info -->
+      <section class="section info">
+        <div class="info__imgs">
+          <picture>
+            <img
+              class="info__img"
+              src="./img/info.jpg"
+              alt="info__img"
+              loading="lazy"
+            >
+          </picture>
+        </div>
+
+        <div class="content info__content">
+          <div class="text text--size-3 content__label">ЛЕКЦІЯ <span class="content__date">26/08/2019 - 11:00</span></div>
+          <h3 class="h3 content__subtitle">Від класицизму до романтизму</h3>
         </div>
       </section>
 
@@ -139,7 +162,6 @@
           </div>
         </div>
       </section>
-
     </main>
 
     <!-- footer -->
