create all blocks except footer

--- a/src/index.html
+++ b/src/index.html
@@ -25,28 +25,59 @@
         <div class="header__content">
           <div class="header__info">
             <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
             <a href="#" class="button button--tickets">
               <button class="button__title">КВИТКИ</button>
               <div class="button__arrow"></div>
             </a>
+
             <div class="header__events">
               <a href="#events" class="header__events-link">ПОДІЇ</a>
               <div class="header__events-line"></div>
             </div>
           </div>
+
           <div class="header__photo">
             <p class="header__logo">NA<br>MU</p>
           </div>
-          <a href="#menu" class="icon icon--menu"></a>
 
+          <a href="#menu" class="icon icon--menu"></a>
         </div>
       </div>
     </header>
 
-    <aside class="menu" id="menu">
+    <aside class="menu page__menu" id="menu">
       <div class="container">
-        <div class="menu__nav"></div>
-        <div class="menu__schedule"></div>
+        <div class="menu__content">
+          <div class="menu__bloc">
+            <div class="menu__nav">
+              <a href="#gallery" class="menu__nav-link">Галерея</a>
+              <a href="#follow" class="menu__nav-link">Про Нас</a>
+              <a href="#events" class="menu__nav-link">Виставки та події</a>
+              <a href="#footer" class="menu__nav-link">Контакти</a>
+            </div>
+          </div>
+          <div class="menu__bloc menu__bloc--schedule">
+            <div class="menu__schedule">
+              <p class="menu__schedule-title">Графік роботи</p>
+              <div class="menu__schedule-work">
+                <p class="menu__schedule-work-column">
+                  <span class="menu__text-bold">12:00 — 20:00</span> середа
+                  <span class="menu__text-bold">12:00 — 20:00</span> четвер
+                  <span class="menu__text-bold">12:00 — 20:00</span> п’ятниця
+                  <span class="menu__text-bold">11:00 — 19:00</span> субота
+                  <span class="menu__text-bold">11:00 — 19:00</span> неділя
+                </p>
+                <p class="menu__schedule-work-column">
+                  <span class="menu__text-bold">Вихідні:</span>  понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+          <a href="#" class="icon icon--close"></a>
+        </div>
       </div>
     </aside>
 
@@ -54,7 +85,7 @@
       <div class="container">
         <section class="events" id="events">
           <h2 class="section__title">Актуальні події</h2>
-          <div class="section__content">
+          <div class="events__content">
             <article class="event">
               <img
                 src="./images/events/go-and-back.png"
@@ -90,7 +121,7 @@
               <div class="event__details event__details--lecture">
                 <div class="event__details-top event__details-top--lecture">
                   <p class="event__type">ЛЕКЦІЯ</p>
-                  <p class="event__date">26/08/2019 - 11:00</p>
+                  <p class="event__date event__date--lecture">26/08/2019 - 11:00</p>
                 </div>
                 <h2 class="event__title">Від класицизму до романтизму</h2>
               </div>
@@ -98,25 +129,58 @@
           </div>
         </section>
 
-        <section class="gallery">
+        <section class="gallery" id="gallery">
           <h2 class="section__title">Галерея</h2>
-          <div class="section__content">
+          <div class="gallery__content">
+            <div class="gallery__images gallery__images--tall">
+              <img
+                class="gallery__image gallery__image--narrow"
+                src="./images/gallery/tall-narrow.png"
+                alt="image_1"
+              >
+              <img
+                src="./images/gallery/tall-large.png"
+                alt="image_2"
+                class="gallery__image gallery__image--large"
+              >
+            </div>
+            <div class="gallery__images gallery__images--short">
+              <img
+                src="./images/gallery/short-large.png"
+                alt="image_3"
+                class="gallery__image gallery__image--large"
+              >
+              <img
+                src="./images/gallery/short-narrow.png"
+                alt="image_4"
+                class="gallery__image gallery__image--narrow"
+              >
+            </div>
           </div>
         </section>
 
-        <section class="follow">
-          <h2 class="section__title">Підписка</h2>
-          <div class="section__content">
-          </div>
-        </section>
+        <section class="follow" id="follow">
+          <div class="follow__content">
+            <h2 class="section__title section__title--follow">Підписка</h2>
+            <p class="follow__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
 
-        <section class="contacts">
-          <div class="section__content">
+            <form action="#" method="post">
+              <div class="follow__form">
+                <input
+                  type="email"
+                  name="email"
+                  class="follow__input"
+                  placeholder="E-mail"
+                  required
+                >
+                <button type="submit" class="follow__button"></button>
+              </div>
+            </form>
           </div>
         </section>
       </div>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer" id="footer"></footer>
   </body>
 </html>
