--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,280 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <script src="./scripts/slider.js" defer></script>
+    <script src="./scripts/main.js" defer></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+
+  <body class="page__content">
+    <header class="header">
+      <div class="header__top">
+        <div class="container">
+          <div class="top-bar">
+            <a href="#menu"  class="top-bar__menu"></a>
+            <a href="#" class="logo">
+              <p class="logo__name">NA</p>
+              <p class="logo__name">MU</p>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="header__bottom">
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <div class="tickets header__tickets">
+            <p class="tickets__main">квитки</p>
+            <button class="btn btn__tickets">
+              <img
+                src="./images/icons/arrow_right.svg"
+                alt="tickets"
+                class="tickets__arrow"
+              >
+            </button>
+          </div>
+          <h2 class="section-title header__title">Актуальні події</h2>
+        </div>
+      </div>
+    </header>
+
+    <main class="main">
+      <section class="actions">
+        <article class="actions__item">
+          <div class="container">
+            <img
+              src="./images/actions/img-1.png"
+              alt="Йду і повертаюсь"
+              class="actions__img"
+            >
+            <div>
+              <div class="actions__data">
+                <p class="actions__name">ВИСТАВКА</p>
+                <p class="actions__date">26.08-29.11.2019</p>
+              </div>
+              <h3 class="actions__title">Йду і повертаюсь</h3>
+              <p class="actions__text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+        </article>
+
+        <article class="actions__item">
+          <div class="container">
+            <img
+              src="./images/actions/img-2.png"
+              alt="Йду і повертаюсь"
+              class="actions__img"
+            >
+            <div>
+              <div class="actions__data">
+                <p class="actions__name">ВИСТАВКА</p>
+                <p class="actions__date">26.08-29.11.2019</p>
+              </div>
+              <h3 class="actions__title">І спогади і мрії</h3>
+              <p class="actions__text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+        </article>
+
+        <article class="actions__item">
+          <img
+            src="./images/actions/img-3.png"
+            alt="Від класицизму до романтизму"
+            class="actions__img actions__img--3"
+          >
+
+          <div class="container">
+            <div class="actions__bottom">
+              <div class="actions__data actions__data--3">
+                <p class="actions__name">ЛЕКЦІЯ</p>
+                <p class="actions__date">26/08/2019 - 11:00</p>
+              </div>
+              <h3 class="actions__title actions__title--3">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+        </article>
+
+      </section>
+
+      <section class="gallery">
+        <div class="container">
+          <h2 class="section-title gallery__title">Галерея</h2>
+          <div class="slider gallery__slider">
+            <div class="slider__images">
+              <div class="slider__img-wr">
+                <img
+                  src="./images/slider/image-1.png"
+                  alt="image-1"
+                  class="slider__img"
+                >
+              </div>
+
+              <div class="slider__img-wr">
+                <img
+                  src="./images/slider/image-2.png"
+                  alt="image-1"
+                  class="slider__img"
+                >
+              </div>
+
+              <div class="slider__img-wr">
+                <img
+                  src="./images/slider/image-3.png"
+                  alt="image-1"
+                  class="slider__img"
+                >
+              </div>
+
+              <div class="slider__img-wr">
+                <img
+                  src="./images/slider/image-4.png"
+                  alt="image-1"
+                  class="slider__img"
+                >
+              </div>
+            </div>
+
+            <div class="slider__buttons">
+              <div class="slider__button-wr" data-image-num="0">
+                <div class="slider__button slider__button--active"></div>
+              </div>
+              <div class="slider__button-wr" data-image-num="1">
+                <div class="slider__button"></div>
+              </div>
+              <div class="slider__button-wr" data-image-num="2">
+                <div class="slider__button"></div>
+              </div>
+              <div class="slider__button-wr" data-image-num="3">
+                <div class="slider__button"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscribe">
+        <div class="container">
+          <h2 class="section-title subscribe__title">Підписка</h2>
+          <p class="subscribe__subtitle">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form
+            action="#"
+            class="form"
+            onsubmit="this.reset(); return false"
+          >
+            <div class="form__input-box">
+              <input
+                type="email"
+                class="form__email"
+                name="email"
+                autocomplete="on"
+                placeholder="E-mail"
+              >
+              <button class="btn btn__form">
+                <img
+                  src="./images/icons/arrow_right.svg"
+                  alt="tickets"
+                  class="tickets__arrow"
+                >
+              </button>
+            </div>
+
+            </button>
+          </form>
+        </div>
+      </section>
+
+      <section class="schedule">
+        <div class="container">
+          <div class="schedule__content">
+            <div class="schedule__header">
+              <a href="#" class="logo">
+                <p class="logo__name">NA</p>
+                <p class="logo__name">MU</p>
+              </a>
+
+              <div class="social-icons">
+                <a
+                  href="https://facebook.com"
+                  class="social-icons__item"
+                  target="_blank"
+                >
+                  <img src="./images/icons/facebook.svg" alt="facebook icon">
+                </a>
+
+                <a
+                  href="https://instagram.com"
+                  target="_blank"
+                  class="social-icons__item"
+                >
+                  <img src="./images/icons/instagram.svg" alt="instagram icon">
+                </a>
+              </div>
+            </div>
+
+            <div class="schedule__left">
+              <p class="schedule__title">Графік роботи</p>
+              <div class="schedule__items">
+                <div class="schedule__item">
+                  <p class="schedule__time">12:00 - 20:00</p>
+                  <p class="shedule__day">середа</p>
+                </div>
+                <div class="schedule__item">
+                  <p class="schedule__time">12:00 - 20:00</p>
+                  <p class="shedule__day">четвер</p>
+                </div>
+                <div class="schedule__item">
+                  <p class="schedule__time">12:00 - 20:00</p>
+                  <p class="shedule__day">п'ятниця</p>
+                </div>
+                <div class="schedule__item">
+                  <p class="schedule__time">12:00 - 20:00</p>
+                  <p class="shedule__day">субота</p>
+                </div>
+                <div class="schedule__item">
+                  <p class="schedule__time">12:00 - 20:00</p>
+                  <p class="shedule__day">неділя</p>
+                </div>
+              </div>
+              <p class="schedule__note">
+                Вихідні понеділок, вівторок
+              </p>
+              <p class="schedule__note">
+                Каса припиняє роботу за одну годину до закриття музею
+              </p>
+            </div>
+
+            <div class="schedule__right">
+              <p class="schedule__title">Контакти:</p>
+              <p class="schedule__note">
+                вул. М. Грушевського, 6; Київ, 01001
+                тел. +38 (044) 278-13-57
+                факс +38 (044) 278-74-54
+                e-mail: info@namu.kiev.ua
+              </p>
+            </div>
+
+            <a href="#" class="schedule__btn"></a>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">Footer</footer>
   </body>
 </html>
