--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,56 @@
     <div class="loader"></div>
 
     <!-- header -->
-    <header class="header"></header>
+    <header class="header">
+      <div class="header__layer"></div>
+
+      <div class="header__burger"><span></span></div>
+
+      <a href="index.html" class="header__logos">
+        <picture>
+          <img
+            class="header__logo"
+            src="./img/header_logo.svg"
+            alt="banner__img"
+            loading="lazy"
+          >
+        </picture>
+      </a>
+
+      <div class="header__menu">
+        <ul class="header__list">
+          <li class="header__li">
+            <a href="index.html" class="header__link">Галерея</a>
+          </li>
+          <li class="header__item">
+            <a href="index.html" class="header__link">Про Нас</a>
+          </li>
+          <li class="header__item">
+            <a href="index.html" class="header__link">Виставки та події</a>
+          </li>
+          <li class="header__item">
+            <a href="index.html" class="header__link">Контакти</a>
+          </li>
+        </ul>
+
+        <div class="text text--size-3 header__cont">
+          <div class="header__title">Графік роботи</div>
+          <div class="header__items">
+            <div class="header__item">
+              <p><span>12:00 — 20:00</span> середа</p>
+              <p><span>12:00 — 20:00</span> четвер</p>
+              <p><span>12:00 — 20:00</span> п’ятниця</p>
+              <p><span>11:00 — 19:00</span> субота</p>
+              <p><span>11:00 — 19:00</span> неділя</p>
+            </div>
+            <div class="header__item">
+              <p><span>Вихідні:</span> понеділок, вівторок</p>
+              <p>Каса припиняє роботу за 1 годину до закриття музею</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
 
     <!-- main -->
     <main>
