--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,11 @@
   </head>
 
   <body class="page__content">
-    <header class="header">
+    <header class="header page__header">
       <div class="header__top">
         <div class="container">
-          <div class="top-bar">
-            <a href="#menu"  class="top-bar__menu"></a>
+          <div class="top-bar header__top-bar">
+            <a href="#menu-header"  class="top-bar__menu"></a>
             <a href="#" class="logo">
               <p class="logo__name">NA</p>
               <p class="logo__name">MU</p>
@@ -43,13 +43,62 @@
               >
             </button>
           </div>
-          <h2 class="section-title header__title">Актуальні події</h2>
+          <h2 class="section-title header__title" id="actions">Актуальні події</h2>
+        </div>
+      </div>
+
+      <div class="menu-header header__menu-header" id="menu-header">
+        <div class="menu-header__content">
+          <div class="container">
+            <div class="menu-header__top">
+              <a href="#" class="menu-header__close"></a>
+
+              <section class="menu">
+                <div class="menu__content menu__content--header">
+                  <div class="menu__box">
+                    <a href="#gallery" class="menu__item menu__item--header">Галерея</a>
+                    <a href="#actions" class="menu__item menu__item--header">Виставки та події</a>
+                  </div>
+                  <div class="menu__box">
+                    <a href="#schedule" class="menu__item menu__item--header">Про Нас</a>
+                    <a href="#schedule" class="menu__item menu__item--header">Контакти</a>
+                  </div>
+                </div>
+              </section>
+            </div>
+
+            <div class="menu-header__schedule">
+              <p class="menu-header__text menu-header__text--title">Графік роботи</p>
+              <p class="menu-header__text">
+                <strong class="menu-header__time">12:00 — 20:00</strong> середа
+              </p>
+              <p class="menu-header__text">
+                <strong class="menu-header__time">12:00 — 20:00</strong> четвер
+              </p>
+              <p class="menu-header__text">
+                <strong class="menu-header__time">12:00 — 20:00</strong> п’ятниця
+              </p>
+              <p class="menu-header__text">
+                <strong class="menu-header__time">12:00 — 20:00</strong> субота
+              </p>
+              <p class="menu-header__text">
+                <strong class="menu-header__time">12:00 — 20:00</strong> неділя
+              </p>
+            </div>
+
+            <p class="menu-header__text">
+              <strong class="menu-header__time">Вихідні:</strong> понеділок, вівторок
+            </p>
+            <p class="menu-header__text">
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
         </div>
       </div>
     </header>
 
     <main class="main">
-      <section class="actions">
+      <section class="actions" >
         <article class="actions__item">
           <div class="container">
             <img
@@ -110,7 +159,7 @@
 
       </section>
 
-      <section class="gallery">
+      <section class="gallery" id="gallery">
         <div class="container">
           <h2 class="section-title gallery__title">Галерея</h2>
           <div class="slider gallery__slider">
@@ -199,7 +248,7 @@
         </div>
       </section>
 
-      <section class="schedule">
+      <section class="schedule main__schedule" id="schedule">
         <div class="container">
           <div class="schedule__content">
             <div class="schedule__header">
@@ -228,53 +277,117 @@
             </div>
 
             <div class="schedule__left">
-              <p class="schedule__title">Графік роботи</p>
+              <p class="schedule__text schedule__text--title">Графік роботи</p>
               <div class="schedule__items">
                 <div class="schedule__item">
-                  <p class="schedule__time">12:00 - 20:00</p>
+                  <p class="schedule__text--time">12:00 - 20:00</p>
                   <p class="shedule__day">середа</p>
                 </div>
                 <div class="schedule__item">
-                  <p class="schedule__time">12:00 - 20:00</p>
+                  <p class="schedule__text--time">12:00 - 20:00</p>
                   <p class="shedule__day">четвер</p>
                 </div>
                 <div class="schedule__item">
-                  <p class="schedule__time">12:00 - 20:00</p>
+                  <p class="schedule__text--time">12:00 - 20:00</p>
                   <p class="shedule__day">п'ятниця</p>
                 </div>
                 <div class="schedule__item">
-                  <p class="schedule__time">12:00 - 20:00</p>
+                  <p class="schedule__text--time">12:00 - 20:00</p>
                   <p class="shedule__day">субота</p>
                 </div>
                 <div class="schedule__item">
-                  <p class="schedule__time">12:00 - 20:00</p>
+                  <p class="schedule__text--time">12:00 - 20:00</p>
                   <p class="shedule__day">неділя</p>
                 </div>
               </div>
-              <p class="schedule__note">
+              <p class="schedule__text">
                 Вихідні понеділок, вівторок
               </p>
-              <p class="schedule__note">
+              <p class="schedule__text">
                 Каса припиняє роботу за одну годину до закриття музею
               </p>
             </div>
 
             <div class="schedule__right">
-              <p class="schedule__title">Контакти:</p>
-              <p class="schedule__note">
+              <p class="schedule__text schedule__text--title">Контакти:</p>
+
+              <a
+                href="https://www.google.com/maps"
+                target="_blank"
+                class="schedule__text schedule__text--link"
+              >
                 вул. М. Грушевського, 6; Київ, 01001
+              </a>
+
+              <a
+                href="tel:+38 (044) 278-13-57"
+                target="_blank"
+                class="schedule__text schedule__text--link"
+              >
                 тел. +38 (044) 278-13-57
+              </a>
+              <a
+                href="tel:+38 (044) 278-13-57"
+                target="_blank"
+                class="schedule__text schedule__text--link"
+              >
                 факс +38 (044) 278-74-54
+              </a>
+              <a
+                href="mailto:info@namu.kiev.ua"
+                target="_blank"
+                class="schedule__text schedule__text--link"
+              >
                 e-mail: info@namu.kiev.ua
-              </p>
+              </a>
+
             </div>
 
-            <a href="#" class="schedule__btn"></a>
+            <a href="#" class="schedule__btn">
+              <svg
+                width="50"
+                height="50"
+                viewBox="0 0 50 50"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <circle
+                  cx="25"
+                  cy="25"
+                  r="24.5"
+                  class="schedule__svg"
+                ></circle>
+                <path
+                  d="M25 19L20 24L20.705 24.705L24.5 20.915V31H25.5V20.915L29.295 24.705L30 24L25 19Z"
+                  class="schedule__svg"
+                 ></path>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <section class="menu">
+        <div class="container">
+          <div class="menu__content">
+            <div class="menu__box">
+              <a href="#gallery" class="menu__item">Галерея</a>
+              <a href="#actions" class="menu__item">Виставки та події</a>
+            </div>
+            <div class="menu__box">
+              <a href="#schedule" class="menu__item">Про Нас</a>
+              <a href="#schedule" class="menu__item">Контакти</a>
+            </div>
           </div>
         </div>
       </section>
     </main>
 
-    <footer class="footer">Footer</footer>
+    <footer class="footer page__footer">
+      <div class="container">
+        <div class="footer__item">Designed by Zhyriada Marina</div>
+        <div class="footer__item">Copyright © 2019. All Rights Reserved.</div>
+      </div>
+    </footer>
   </body>
 </html>
