--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,218 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="icon" href="./images/logo-NA-MU.svg">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header" id="header">
+      <div class="header__nav">
+        <a href="#menu" class="header__link">
+          <img
+            src="./images/icons/menu.svg"
+            alt="menu image"
+            class="icon icon--menu"
+          >
+        </a>
+
+        <a href="#" class="header__link">
+          <img
+            src="./images/logo-NA-MU.svg"
+            alt="muzei logotype"
+            class="icon icon--logo"
+          >
+        </a>
+      </div>
+
+      <div class="header__bottom">
+        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <a href="#" class="header__bottom__link">КВИТКИ<img src="./images/icons/arrow-white.svg" alt="arrow logo" class="header__bottom__image"></a>
+      </div>
+    </header>
+
+    <aside class="menu" id="menu">
+      <nav class="menu__navigation">
+        <a href="#close" class="icon icon--close"></a>
+        <div>
+          <a href="#gallery" class="menu__link">Галерея</a>
+
+          <a href="#expo" class="menu__link">Виставки та події</a>
+
+          <a href="#about_us" class="menu__link">Про Нас</a>
+
+          <a href="#contacts" class="menu__link">Контакти</a>
+        </div>
+      </nav>
+
+      <div class="menu__schedule">
+        <h2 class="menu__header">Графік роботи</h2>
+        <p class="menu__description">12:00 — 20:00 середа<br>
+          12:00 — 20:00 четвер<br>
+          12:00 — 20:00 п’ятниця<br>
+          11:00 — 19:00 субота<br>
+          11:00 — 19:00 неділя
+        </p>
+
+        <p class="menu__description">Вихідні: понеділок, вівторок<br>
+          Каса припиняє роботу за 1 годину<br>
+          до закриття музею
+        </p>
+      </div>
+    </aside>
+
+    <main>
+      <section class="events">
+        <div class="events__conteiner">
+          <h2 class="events__title">Актуальні події</h2>
+
+          <div class="events__catalog">
+            <div class="event">
+              <img src="./images/events/mobile-event-1.png" alt="painting" class="event__image">
+              <h3 class="event__subtitle">ВИСТАВКА <span class="event__date">26.08-29.11.2019</span></h3>
+              <h4 class="event__title">Йду і повертаюсь</h4>
+              <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            </div>
+
+            <div class="event">
+              <img src="./images/events/mobile-event-2.png" alt="painting" class="event__image">
+              <h3 class="event__subtitle">ВИСТАВКА <span  class="event__date">26.08-29.11.2019</span></h3>
+              <h4 class="event__title">І спогади і мрії</h4>
+              <p class="event__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="lections">
+        <!-- <img src="./images/mobile-muzej-2.png" alt="image" class="lections__image"> -->
+        <div class="lections__container">
+          <h2 class="lections__title">ЛЕКЦІЯ <span class="lections__date">26/08/2019 - 11:00</span></h2>
+          <p class="lections__name">Від класицизму до романтизму</p>
+        </div>
+      </section>
+
+      <section class="gallery">
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__slider">
+          <img
+            src="./images/gallery/gallery.png"
+            alt="image"
+            class="gallery__image"
+          >
+
+          <div class="gallery__slider__items">
+            <div class="gallery__slider__item"></div>
+            <div class="gallery__slider__item"></div>
+            <div class="gallery__slider__item"></div>
+            <div class="gallery__slider__item"></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscribe">
+        <div class="subscribe__conteiner">
+          <h2 class="subscribe__title">Підписка</h2>
+          <p class="subscribe__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+          <div class="subscribe__input__conteiner">
+            <label for="email">
+              <input
+                type="email"
+                placeholder="E-mail"
+                size="30"
+                class="subscribe__input"
+                required
+              >
+            </label>
+            <a href="#">
+              <img src="./images/icons/arrow-black.svg" alt="arrow logo" class="subscribe__image">
+            </a>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__icons">
+        <a href="#">
+          <img
+            src="./images/logo-NA-MU.svg"
+            alt="logo"
+            class="icon icon__footer--logo"
+          >
+        </a>
+
+        <div class="footer__media">
+          <a href="#"><img src="./images/socials/facebook.svg" alt="facebook logo" class="icon icon--facebook"></a>
+          <a href="#"><img src="./images/socials/instagram.svg" alt="instagram logo" class="icon icon--instagram"></a>
+        </div>
+      </div>
+
+      <div class="footer__conteiner">
+        <div class="footer__schedule">
+          <h2 class="footer__title">Графік роботи</h2>
+          <p class="footer__description">
+            <span class="footer__schedule__time">12:00 — 20:00</span> середа<br>
+            <span class="footer__schedule__time">12:00 — 20:00</span> четвер<br>
+            <span class="footer__schedule__time">12:00 — 20:00</span> п’ятниця<br>
+            <span class="footer__schedule__time">11:00 — 19:00</span> субота<br>
+            <span class="footer__schedule__time">11:00 — 19:00</span> неділя
+          </p>
+          <br>
+          <p class="footer__description">Вихідні: понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину<br>
+            до закриття музею
+          </p>
+        </div>
+
+        <div class="footer__contacts">
+          <h2 class="footer__title">Контакти:</h2>
+          <ul class="footer__list">
+            <li>
+              <a
+                href="https://maps.app.goo.gl/zCasBhZbAHNzAGqG9"
+                target="_blank"
+                class="footer__link"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+            </li>
+            <li>
+              <a
+                href="tel:380442781357"
+                class="footer__link"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer__link">факс +38 (044) 278-74-54</a>
+            </li>
+            <li>
+              <a
+                href="mailto:"
+                target="_blank"
+                class="footer__link"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <nav class="footer__navigation">
+        <a href="#gallery" class="footer__navigation__link">Галерея</a>
+        <a href="#expo" class="footer__navigation__link">Виставки та події</a>
+        <a href="#about_us" class="footer__navigation__link">Про Нас</a>
+        <a href="#contacts" class="footer__navigation__link">Контакти</a>
+      </nav>
+
+      <p class="footer__rights">Designed by Zhyriada Marina</p>
+      <p class="footer__rights">Copyright 	&#169; 2019. All Rights Reserved.</p>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
