updated the mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -10,21 +10,9 @@
   <body>
     <header class="header" id="header">
       <div class="header__nav">
-        <a href="#menu" class="header__link">
-          <img
-            src="./images/icons/menu.svg"
-            alt="menu image"
-            class="icon icon--menu"
-          >
-        </a>
+        <a href="#menu" class="header__link icon icon--menu"></a>
 
-        <a href="#" class="header__link">
-          <img
-            src="./images/logo-NA-MU.svg"
-            alt="muzei logotype"
-            class="icon icon--logo"
-          >
-        </a>
+        <a href="#" class="header__link icon icon--logo"></a>
       </div>
 
       <div class="header__bottom">
@@ -36,27 +24,30 @@
     <aside class="menu" id="menu">
       <nav class="menu__navigation">
         <a href="#close" class="icon icon--close"></a>
-        <div>
-          <a href="#gallery" class="menu__link">Галерея</a>
 
-          <a href="#expo" class="menu__link">Виставки та події</a>
+        <div class="menu__conteiner navigation">
+          <a href="#gallery" class="menu__link navigation__link">Галерея</a>
 
-          <a href="#about_us" class="menu__link">Про Нас</a>
+          <a href="#expo" class="menu__link navigation__link">Виставки та події</a>
 
-          <a href="#contacts" class="menu__link">Контакти</a>
+          <a href="#about_us" class="menu__link navigation__link">Про Нас</a>
+
+          <a href="#contacts" class="menu__link navigation__link">Контакти</a>
         </div>
       </nav>
 
       <div class="menu__schedule">
-        <h2 class="menu__header">Графік роботи</h2>
-        <p class="menu__description">12:00 — 20:00 середа<br>
-          12:00 — 20:00 четвер<br>
-          12:00 — 20:00 п’ятниця<br>
-          11:00 — 19:00 субота<br>
-          11:00 — 19:00 неділя
+        <h2 class="menu__title">Графік роботи</h2>
+        <p class="menu__description">
+          <span class="footer__schedule__time">12:00 — 20:00</span> середа<br>
+          <span class="footer__schedule__time">12:00 — 20:00</span> четвер<br>
+          <span class="footer__schedule__time">12:00 — 20:00</span> п’ятниця<br>
+          <span class="footer__schedule__time">11:00 — 19:00</span> субота<br>
+          <span class="footer__schedule__time">11:00 — 19:00</span> неділя
         </p>
-
-        <p class="menu__description">Вихідні: понеділок, вівторок<br>
+        <br>
+        <p class="menu__description">
+          <span class="footer__schedule__time">Вихідні:</span> понеділок, вівторок<br>
           Каса припиняє роботу за 1 годину<br>
           до закриття музею
         </p>
@@ -64,7 +55,7 @@
     </aside>
 
     <main>
-      <section class="events">
+      <section class="events" id="expo">
         <div class="events__conteiner">
           <h2 class="events__title">Актуальні події</h2>
 
@@ -112,7 +103,7 @@
         </div>
       </section>
 
-      <section class="subscribe">
+      <section class="subscribe" id="about_us">
         <div class="subscribe__conteiner">
           <h2 class="subscribe__title">Підписка</h2>
           <p class="subscribe__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
@@ -146,8 +137,20 @@
         </a>
 
         <div class="footer__media">
-          <a href="#"><img src="./images/socials/facebook.svg" alt="facebook logo" class="icon icon--facebook"></a>
-          <a href="#"><img src="./images/socials/instagram.svg" alt="instagram logo" class="icon icon--instagram"></a>
+          <a href="https://www.instagram.com/namu.museum/?igshid=YmMyMTA2M2Y%3D" target="_blank">
+            <img
+              src="./images/socials/facebook.svg"
+              alt="facebook logo"
+              class="icon icon--facebook"
+            >
+          </a>
+          <a href="https://www.facebook.com/namu.museum" target="_blank">
+            <img
+              src="./images/socials/instagram.svg"
+              alt="instagram logo"
+              class="icon icon--instagram"
+            >
+          </a>
         </div>
       </div>
 
@@ -204,11 +207,11 @@
         </div>
       </div>
 
-      <nav class="footer__navigation">
-        <a href="#gallery" class="footer__navigation__link">Галерея</a>
-        <a href="#expo" class="footer__navigation__link">Виставки та події</a>
-        <a href="#about_us" class="footer__navigation__link">Про Нас</a>
-        <a href="#contacts" class="footer__navigation__link">Контакти</a>
+      <nav class="footer__navigation navigation">
+        <a href="#gallery" class="navigation__link">Галерея</a>
+        <a href="#expo" class="navigation__link">Виставки та події</a>
+        <a href="#about_us" class="navigation__link">Про Нас</a>
+        <a href="#contacts" class="navigation__link">Контакти</a>
       </nav>
 
       <p class="footer__rights">Designed by Zhyriada Marina</p>
