add scroll-top button

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,12 @@
       </div>
     </header>
 
+    <section id="scroll-top">
+      <div>
+        <a href="#header" class="scroll__top"></a>
+      </div>
+    </section>
+
     <aside class="menu" id="menu">
       <nav class="menu__navigation">
         <a href="#close" class="icon icon--close"></a>
