create a full desktop part

--- a/src/index.html
+++ b/src/index.html
@@ -47,36 +47,38 @@
     </header>
 
     <aside class="menu page__menu" id="menu">
-      <div class="container">
-        <div class="menu__content">
-          <div class="menu__bloc">
-            <div class="menu__nav">
-              <a href="#gallery" class="menu__nav-link">Галерея</a>
-              <a href="#follow" class="menu__nav-link">Про Нас</a>
-              <a href="#events" class="menu__nav-link">Виставки та події</a>
-              <a href="#footer" class="menu__nav-link">Контакти</a>
-            </div>
-          </div>
-          <div class="menu__bloc menu__bloc--schedule">
-            <div class="menu__schedule">
-              <p class="menu__schedule-title">Графік роботи</p>
-              <div class="menu__schedule-work">
-                <p class="menu__schedule-work-column">
-                  <span class="menu__text-bold">12:00 — 20:00</span> середа
-                  <span class="menu__text-bold">12:00 — 20:00</span> четвер
-                  <span class="menu__text-bold">12:00 — 20:00</span> п’ятниця
-                  <span class="menu__text-bold">11:00 — 19:00</span> субота
-                  <span class="menu__text-bold">11:00 — 19:00</span> неділя
-                </p>
-                <p class="menu__schedule-work-column">
-                  <span class="menu__text-bold">Вихідні:</span>  понеділок, вівторок
-                  Каса припиняє роботу за 1 годину
-                  до закриття музею
-                </p>
+      <div class="page__menu-wrapp">
+        <div class="container">
+          <div class="menu__content">
+            <div class="menu__block">
+              <div class="nav">
+                <a href="#gallery" class="nav__link">Галерея</a>
+                <a href="#follow" class="nav__link">Про Нас</a>
+                <a href="#events" class="nav__link">Виставки та події</a>
+                <a href="#footer" class="nav__link">Контакти</a>
               </div>
             </div>
+            <div class="menu__block menu__block--museum-info">
+              <div class="museum-info">
+                <p class="museum-info__title">Графік роботи</p>
+                <div class="museum-info__work">
+                  <p class="museum-info__work-column">
+                    <span class="museum-info__text-bold">12:00 — 20:00</span> середа
+                    <span class="museum-info__text-bold">12:00 — 20:00</span> четвер
+                    <span class="museum-info__text-bold">12:00 — 20:00</span> п’ятниця
+                    <span class="museum-info__text-bold">11:00 — 19:00</span> субота
+                    <span class="museum-info__text-bold">11:00 — 19:00</span> неділя
+                  </p>
+                  <p class="museum-info__work-column">
+                    <span class="museum-info__text-bold">Вихідні:</span>  понеділок, вівторок
+                    Каса припиняє роботу за 1 годину
+                    до закриття музею
+                  </p>
+                </div>
+              </div>
+            </div>
+            <a href="#" class="icon icon--close"></a>
           </div>
-          <a href="#" class="icon icon--close"></a>
         </div>
       </div>
     </aside>
@@ -164,7 +166,11 @@
             <h2 class="section__title section__title--follow">Підписка</h2>
             <p class="follow__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
 
-            <form action="#" method="post">
+            <form
+              action="#"
+              method="post"
+              onsubmit="this.reset(); return false;"
+            >
               <div class="follow__form">
                 <input
                   type="email"
@@ -181,6 +187,58 @@
       </div>
     </main>
 
-    <footer class="footer" id="footer"></footer>
+    <footer class="footer" id="footer">
+      <div class="container">
+        <div class="footer__content">
+
+          <div class="footer__icons">
+            <a href="#" class="footer__logo"></a>
+            <div class="footer__icons-sm">
+              <a href="#" class="icon icon--facebook"></a>
+              <a href="#" class="icon icon--instagram"></a>
+            </div>
+          </div>
+          <div class="footer__contacts">
+            <div class="museum-info">
+              <p class="museum-info__title museum-info__title--footer">Графік роботи</p>
+              <div class="museum-info__work museum-info__work--footer">
+                <p class="museum-info__work-column museum-info__work-column--footer">
+                  <span class="museum-info__text-bold">12:00 — 20:00</span> середа
+                  <span class="museum-info__text-bold">12:00 — 20:00</span> четвер
+                  <span class="museum-info__text-bold">12:00 — 20:00</span> п’ятниця
+                  <span class="museum-info__text-bold">11:00 — 19:00</span> субота
+                  <span class="museum-info__text-bold">11:00 — 19:00</span> неділя
+                </p>
+                <p class="museum-info__work-column museum-info__work-column--footer">
+                  <span class="museum-info__text-bold">Вихідні:</span>  понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
+            </div>
+            <div class="museum-info">
+              <p class="museum-info__title museum-info__title--footer">Контакти:</p>
+              <p class="museum-info__work-column museum-info__work-column--footer">
+                вул. М. Грушевського, 6; Київ, 01001
+                тел. +38 (044) 278-13-57
+                факс +38 (044) 278-74-54
+                e-mail: info@namu.kiev.ua
+              </p>
+            </div>
+          </div>
+
+          <div class="nav nav--footer">
+            <a href="#gallery" class="nav__link nav__link--footer">Галерея</a>
+            <a href="#follow" class="nav__link nav__link--footer">Про Нас</a>
+            <a href="#events" class="nav__link nav__link--footer">Виставки та події</a>
+            <a href="#footer" class="nav__link nav__link--footer">Контакти</a>
+          </div>
+        </div>
+        <div class="footer__rights">
+          <p class="footer__rights-text">Copyright © 2019. All Rights Reserved.</p>
+          <p class="footer__rights-text">Designed by Zhyriada Marina</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
