complete tablet vers

--- a/src/index.html
+++ b/src/index.html
@@ -49,49 +49,54 @@
       <div class="menu-header header__menu-header" id="menu-header">
         <div class="menu-header__content">
           <div class="container">
-            <div class="menu-header__top">
-              <a href="#" class="menu-header__close"></a>
+            <div class="menu-header__box">
+              <div class="menu-header__top">
+                <a href="#" class="menu-header__close"></a>
+                <section class="menu">
+                  <h2 class="visually-hidden">Меню</h2>
+                  <div class="menu__content menu__content--header">
+                    <div class="menu__box">
+                      <a href="#gallery" class="menu__item menu__item--header">Галерея</a>
+                      <a href="#actions" class="menu__item menu__item--header">Виставки та події</a>
+                    </div>
+                    <div class="menu__box">
+                      <a href="#schedule" class="menu__item menu__item--header">Про Нас</a>
+                      <a href="#schedule" class="menu__item menu__item--header">Контакти</a>
+                    </div>
+                  </div>
+                </section>
+              </div>
 
-              <section class="menu">
-                <h2 class="visually-hidden">Меню</h2>
-                <div class="menu__content menu__content--header">
-                  <div class="menu__box">
-                    <a href="#gallery" class="menu__item menu__item--header">Галерея</a>
-                    <a href="#actions" class="menu__item menu__item--header">Виставки та події</a>
-                  </div>
-                  <div class="menu__box">
-                    <a href="#schedule" class="menu__item menu__item--header">Про Нас</a>
-                    <a href="#schedule" class="menu__item menu__item--header">Контакти</a>
-                  </div>
+              <div class="menu-header__bottom">
+                <div class="menu-header__schedule">
+                  <p class="menu-header__text menu-header__text--title">Графік роботи</p>
+                  <p class="menu-header__text">
+                    <strong class="menu-header__time">12:00 — 20:00</strong> середа
+                  </p>
+                  <p class="menu-header__text">
+                    <strong class="menu-header__time">12:00 — 20:00</strong> четвер
+                  </p>
+                  <p class="menu-header__text">
+                    <strong class="menu-header__time">12:00 — 20:00</strong> п’ятниця
+                  </p>
+                  <p class="menu-header__text">
+                    <strong class="menu-header__time">12:00 — 20:00</strong> субота
+                  </p>
+                  <p class="menu-header__text">
+                    <strong class="menu-header__time">12:00 — 20:00</strong> неділя
+                  </p>
                 </div>
-              </section>
-            </div>
 
-            <div class="menu-header__schedule">
-              <p class="menu-header__text menu-header__text--title">Графік роботи</p>
-              <p class="menu-header__text">
-                <strong class="menu-header__time">12:00 — 20:00</strong> середа
-              </p>
-              <p class="menu-header__text">
-                <strong class="menu-header__time">12:00 — 20:00</strong> четвер
-              </p>
-              <p class="menu-header__text">
-                <strong class="menu-header__time">12:00 — 20:00</strong> п’ятниця
-              </p>
-              <p class="menu-header__text">
-                <strong class="menu-header__time">12:00 — 20:00</strong> субота
-              </p>
-              <p class="menu-header__text">
-                <strong class="menu-header__time">12:00 — 20:00</strong> неділя
-              </p>
+                <div class="menu-header__text-box">
+                  <p class="menu-header__text">
+                    <strong class="menu-header__time">Вихідні:</strong> понеділок, вівторок
+                  </p>
+                  <p class="menu-header__text">
+                    Каса припиняє роботу за 1 годину до закриття музею
+                  </p>
+                </div>
+              </div>
             </div>
-
-            <p class="menu-header__text">
-              <strong class="menu-header__time">Вихідні:</strong> понеділок, вівторок
-            </p>
-            <p class="menu-header__text">
-              Каса припиняє роботу за 1 годину до закриття музею
-            </p>
           </div>
         </div>
       </div>
@@ -221,32 +226,34 @@
 
       <section class="subscribe">
         <div class="container">
-          <h2 class="section-title subscribe__title">Підписка</h2>
-          <p class="subscribe__subtitle">
-            Бути в курсі всіх актуальних подій та останніх новин.
-          </p>
-          <form
-            action="#"
-            class="form"
-            onsubmit="this.reset(); return false"
-          >
-            <div class="form__input-box">
-              <input
-                type="email"
-                class="form__email"
-                name="email"
-                autocomplete="on"
-                placeholder="E-mail"
-              >
-              <button class="btn btn__form">
-                <img
-                  src="./images/icons/arrow_right.svg"
-                  alt="tickets"
-                  class="tickets__arrow"
+          <div class="subscribe__content">
+            <h2 class="section-title subscribe__title">Підписка</h2>
+            <p class="subscribe__subtitle">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form
+              action="#"
+              class="form subscribe__form"
+              onsubmit="this.reset(); return false"
+            >
+              <div class="form__input-box">
+                <input
+                  type="email"
+                  class="form__email"
+                  name="email"
+                  autocomplete="on"
+                  placeholder="E-mail"
                 >
-              </button>
-            </div>
-          </form>
+                <button class="btn btn__form">
+                  <img
+                    src="./images/icons/arrow_right.svg"
+                    alt="tickets"
+                    class="tickets__arrow"
+                  >
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
       </section>
 
@@ -374,8 +381,10 @@
 
     <footer class="footer page__footer">
       <div class="container">
-        <div class="footer__item">Designed by Zhyriada Marina</div>
-        <div class="footer__item">Copyright © 2019. All Rights Reserved.</div>
+        <div class="footer__content">
+          <div class="footer__item">Designed by Zhyriada Marina</div>
+          <div class="footer__item">Copyright © 2019. All Rights Reserved.</div>
+        </div>
       </div>
     </footer>
   </body>
